traces/bug_794.txt
examples++-load/medit.cpp:1822: error: DEAD_STORE
  The value written to &nbetmp (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1822:5: Write of unused value
1820.       int nvtmp  = iv;
1821.       int nttmp  = it;
1822.       int nbetmp = ibe;
            ^
1823.         
1824.       const Mesh3 &Thtmp =l[i].evalm(0,stack);
